After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753895 - Incorrect plural form of child
Incorrect plural form of child
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: general
git master
Other All
: Normal minor
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2015-08-20 19:55 UTC by Anders Jonsson
Modified: 2015-08-21 11:12 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Anders Jonsson 2015-08-20 19:55:43 UTC
In /clutter/clutter-box-layout.c:1381 is a string containing "all childs get the same size".


Here it would look much better to me if "childs" was changed to "children" as it already is in other translatable strings of clutter.


Regards,
Anders Jonsson
Comment 1 Emmanuele Bassi (:ebassi) 2015-08-21 11:12:49 UTC
Thanks, fixed in master.