docs: Fix a typo in the BoxLayout:homogeneous description

https://bugzilla.gnome.org/show_bug.cgi?id=753895